--- a/src/app/demo/pages/uikit/cadastrofornecedor/cadastrofornecedor.component.html
+++ b/src/app/demo/pages/uikit/cadastrofornecedor/cadastrofornecedor.component.html
@@ -1,12 +1,12 @@
 <div class="grid">
     <div class="col-12">
         <div class="card px-6 py-6">
-			<app-header-screen title="Cadastro de Fornecedor" buttonLabel="Cadastrar Produto" (click)="openNew()" />
+			<app-header-screen title="Cadastro de Fornecedor" buttonLabel="Cadastrar Fornecedor" (click)="openNew()" />
             <p-toast></p-toast>
             <p-table #dt [value]="products" [columns]="cols" responsiveLayout="scroll" [rows]="10" [globalFilterFields]="['name','code','price','category']" [paginator]="true" [rowsPerPageOptions]="[10,20,30]" [showCurrentPageReport]="true" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [(selection)]="selectedProducts" selectionMode="multiple" [rowHover]="true" dataKey="id">
                 <ng-template pTemplate="caption">
                     <div class="flex flex-column md:flex-row md:justify-content-between md:align-items-center">
-                        <h5 class="m-0">Gerencie Produtos</h5>
+                        <h5 class="m-0">Gerencie Fornecedores</h5>
                         <span class="block mt-2 md:mt-0 p-input-icon-left">
                             <i class="pi pi-search"></i>
                             <input pInputText type="text" (input)="onGlobalFilter(dt, $event)" placeholder="Pesquisar"  class="w-full sm:w-auto"/>
